--- a/css/master.css
+++ b/css/master.css
@@ -18,11 +18,25 @@ html {
     background-color: #fff;
 }
 
+.link {
+    text-decoration: none;
+    color: #fff;
+    border-bottom: 2px solid #fbb002;
+}
+
 /* homepage */
 
 .header {
     background-color: #fbb002;
     height: 100px;
+}
+
+#homepage {
+    background-image: url(/media/bronsschat.jpg);
+    background-position: top center;
+    background-size: 100vw auto;
+    background-repeat: no-repeat;
+    height: 50vw;
 }
 
 .logo {
@@ -34,40 +48,168 @@ html {
 .titel {
     color: #fff;
     margin-left: 25%;
-    margin-top: 1%;
-    font-size: 25px;
+}
+
+/* .hoofd-img {
+    width: 70%;
+    height: 70%;
 }
 
 .hoofd-foto {
-    margin-top: 10%;
-    margin-bottom: 10%;
-    margin-right: 10%;
-    margin-left: 13%
+    height: 70%;
+    width: 70%;
+    margin-left: 40%;
+    margin-top: 5%;
+    margin-bottom: 11%;
+} */
 
+/* scroll */
+.icon-scroll, .icon-scroll:before {
+    position: absolute;
+    left: 50%;
+}
+
+.icon-scroll {
+    width: 40px;
+    height: 70px;
+    margin-left: -20px;
+    top: 50%;
+    margin-top: 18%;
+    box-shadow: inset 0 0 0 1px #2890df;
+    border-radius: 25px;
+}
+
+.icon-scroll:before {
+    content: '';
+    width: 8px;
+    height: 8px;
+    background: #2890df;
+    margin-left: -4px;
+    top: 8px;
+    border-radius: 4px;
+    -webkit-animation-duration: 2s;
+    animation-duration: 2s;
+    -webkit-animation-iteration-count: infinite;
+    animation-iteration-count: infinite;
+    -webkit-animation-name: scroll;
+    animation-name: scroll;
+}
+
+@-webkit-keyframes scroll {
+    0% {
+        opacity: 1;
+    }
+
+    100% {
+        opacity: 0;
+        -webkit-transform: translateY(46px);
+        transform: translateY(46px);
+    }
+}
+
+@keyframes scroll {
+    0% {
+        opacity: 1;
+    }
+
+    100% {
+        opacity: 0;
+        -webkit-transform: translateY(46px);
+        transform: translateY(46px);
+    }
 }
 
 @media (max-width: 768px) {
-    .logo{
+    .logo {
         height: 20%;
         width: 20%;
     }
 
+    #homepage{
+        height: 90vh;
+        background-position: top center;
+        background-size: 100vw auto;
+        background-repeat: no-repeat;
+    }
+    
     .titel{
-        font-size: 12px;
+        margin-left: 25%;
         text-align: center;
-        margin-left: 20%;
+        margin-top: 3%;
     }
 
-    #hoofd-foto{
+    h1{
+     font-size: 22px !important;
+     line-height: 20px !important;
+    }
+
+}
+
+/* intro */
+#intro {
+    background-color: #2890df;
+    height: 50vw;
+}
+
+.intro-titel {
+    color: #fff;
+    text-align: center;
+    padding-top: 2%;
+}
+
+.intro-flex {
+    display: flex;
+    flex-direction: row;
+}
+
+.intro-text{
+    text-align: justify;
+    color: #fff;
+    margin-left: 10%;
+    margin-top: 1%;
+    /* margin-right: 15%; */
+}
+
+.intro-img{
+    margin-right: 10%;
+    margin-left: 5%;
+    margin-top: 1%;
+}
+
+#intro-img{
+    height: 50vh;
+    width: 50vw;
+}
+
+@media (max-width: 768px) {
+    #intro{
         height: 100%;
+    }
+
+    .intro-flex{
+        display: flex;
+        flex-direction: column;
+    }
+    
+    .intro-titel{
+        padding-top: 5%;
+    }
+
+    .intro-text{
+        margin-left: 5%;
+        margin-right: 5%;
+    }
+    
+    .intro-img{
+        margin: 5%;
+    }
+
+    #intro-img{
+        height: auto;
         width: 100%;
     }
-
-    .hoofd-foto{
-        margin-top: 20%;
-        margin-left: 15%;
-    }
 }
+
 
 /* footer */
 .footer {
@@ -87,16 +229,15 @@ html {
 }
 
 @media (max-width: 768px) {
-    #pnh{
+    #pnh {
         height: 40%;
         width: 40%;
         margin-left: 40%;
         margin-top: 4%;
         margin-right: 4%;
     }
-    .footer{
-        position: absolute;
-        
 
+    .footer{
+        margin-top: 100%;
     }
 }
