--- a/css/master.css
+++ b/css/master.css
@@ -14,9 +14,13 @@
 
 html {
     scroll-behavior: smooth;
-    min-height: 100%;
+    height: 100%;
     background-color: #fff;
 }
+
+/* body{
+    height: 100%;
+} */
 
 .link {
     text-decoration: none;
