--- a/css/master.css
+++ b/css/master.css
@@ -18,10 +18,6 @@ html {
     background-color: #fff;
 }
 
-/* body{
-    height: 100%;
-} */
-
 .link {
     text-decoration: none;
     color: #fff;
@@ -283,6 +279,72 @@ html {
     #map{
         height: 350px;
         width: 340px
+    }
+}
+
+/* bronsschat */
+/* intro */
+#bronsschat {
+    background-color: #2890df;
+    height: 50vw;
+}
+
+.bronsschat-titel {
+    color: #fff;
+    text-align: center;
+    padding-top: 2%;
+}
+
+.bronsschat-flex {
+    display: flex;
+    flex-direction: row;
+}
+
+.bronsschat-text {
+    text-align: justify;
+    color: #fff;
+    margin-left: 10%;
+    margin-top: 1%;
+    /* margin-right: 15%; */
+}
+
+.bronsschat-img {
+    margin-right: 10%;
+    margin-left: 5%;
+    margin-top: 1%;
+}
+
+#bronsschat-img {
+    height: 50vh;
+    width: 40vw;
+}
+
+@media (max-width: 768px) {
+    #bronsschat {
+        height: 100%;
+    }
+
+    .bronsschat-flex {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .bronsschat-titel {
+        padding-top: 5%;
+    }
+
+    .bronsschat-text {
+        margin-left: 5%;
+        margin-right: 5%;
+    }
+
+    .bronsschat-img {
+        margin: 5%;
+    }
+
+    #bronsschat-img {
+        height: auto;
+        width: 100%;
     }
 }
 
