--- a/css/master.css
+++ b/css/master.css
@@ -32,7 +32,7 @@ html {
 }
 
 #homepage {
-    background-image: url(/media/bronsschat.jpg);
+    background-image: url(/media/bronsschat.webp);
     background-position: top center;
     background-size: 100vw auto;
     background-repeat: no-repeat;
@@ -360,7 +360,7 @@ html {
 
 /* footer */
 .footer {
-    background-color: #2890df;
+    background-color: #1377c3;
     height: 80px;
     width: 100%;
     position: absolute;
@@ -373,6 +373,12 @@ html {
     margin-bottom: 1.2%;
     margin-right: 1.2%;
     margin-left: 85%
+}
+
+.copy{
+    text-align: center;
+    margin-top: -2.5%;
+    color: #fff;
 }
 
 @media (max-width: 768px) {
@@ -388,3 +394,26 @@ html {
         margin-top: 100%;
     }
 }
+
+/* scroll button */
+
+#myBtn {
+    display: none; /* Hidden by default */
+    position: fixed; /* Fixed/sticky position */
+    bottom: 20px; /* Place the button at the bottom of the page */
+    right: 20px; /* Place the button 30px from the right */
+    z-index: 99; /* Make sure it does not overlap */
+    border: none; /* Remove borders */
+    outline: none; /* Remove outline */
+    background-color: #fbb002; /* Set a background color */
+    /* opacity: 0.5; */
+    color: white; /* Text color */
+    cursor: pointer; /* Add a mouse pointer on hover */
+    padding: 15px; /* Some padding */
+    border-radius: 10px; /* Rounded corners */
+    font-size: 18px; /* Increase font size */
+  }
+  
+  #myBtn:hover {
+    background-color: #666; /* Add a dark-grey background on hover */
+  }
