--- a/css/master.css
+++ b/css/master.css
@@ -76,7 +76,7 @@ html {
     margin-left: -20px;
     top: 50%;
     margin-top: 18%;
-    box-shadow: inset 0 0 0 1px #2890df;
+    box-shadow: inset 0 0 0 1px #fbb002;
     border-radius: 25px;
 }
 
@@ -84,7 +84,7 @@ html {
     content: '';
     width: 8px;
     height: 8px;
-    background: #2890df;
+    background: #fbb002;
     margin-left: -4px;
     top: 8px;
     border-radius: 4px;
@@ -127,7 +127,7 @@ html {
     }
 
     #homepage {
-        height: 80vh;
+        height: 37vh;
         background-position: top center;
         background-size: 100vw auto;
         background-repeat: no-repeat;
@@ -146,9 +146,9 @@ html {
     }
 
     .icon-scroll {
-        top: 50%;
-        margin-top: 18%;
-
+        /* top: 50%;
+        margin-top: 18%; */
+        visibility: hidden;
     }
     
 
@@ -182,7 +182,7 @@ html {
 .intro-img {
     margin-right: 10%;
     margin-left: 5%;
-    margin-top: 1%;
+    margin-top: 1.5%;
 }
 
 /* #intro-img {
@@ -244,6 +244,7 @@ html {
     text-align: justify;
     color: #000;
     margin-left: 10%;
+    /* margin-right: 10%; */
     margin-top: 1%;
 }
 
@@ -257,7 +258,7 @@ html {
 
 #map {
     height: 500px;
-    width: 500px;
+    width: 670px;
 }
 
 @media (max-width: 768px) {
@@ -311,6 +312,7 @@ html {
     text-align: justify;
     color: #fff;
     margin-left: 10%;
+    margin-right: 1.5%;
     margin-top: 1%;
     /* margin-right: 15%; */
 }
@@ -391,7 +393,12 @@ html {
     }
 
     .footer {
-        margin-top: 100%;
+        margin-top: -1%;
+        height: 80px;
+    }
+
+    .copy{
+        padding-top: 2%;
     }
 }
 
@@ -402,7 +409,7 @@ html {
     position: fixed; /* Fixed/sticky position */
     bottom: 20px; /* Place the button at the bottom of the page */
     right: 20px; /* Place the button 30px from the right */
-    z-index: 99; /* Make sure it does not overlap */
+    z-index: 1000; /* Make sure it does not overlap */
     border: none; /* Remove borders */
     outline: none; /* Remove outline */
     background-color: #fbb002; /* Set a background color */
@@ -416,4 +423,10 @@ html {
   
   #myBtn:hover {
     background-color: #666; /* Add a dark-grey background on hover */
+  }
+
+  @media (max-width: 768px) {
+      #myBtn{
+          z-index: 1090;
+      }
   }
