--- a/css/master.css
+++ b/css/master.css
@@ -5,7 +5,6 @@
     src: url(rockwell) format(truetype);
 }
 
-
 * {
     margin: 0;
     font-family: 'Montserrat', 'rockwell', sans-serif;
@@ -24,340 +23,124 @@ html {
     border-bottom: 2px solid #fbb002;
 }
 
-/* homepage */
-
-.header {
-    background-color: #fbb002;
-    height: 100px;
+.flex{
+    display: flex;
+    flex-direction: column;
 }
 
-#homepage {
+/* homepage */
+.header{
+    background-color: #fbb002;
+    height: 80px;
+}
+
+#homepage{
     background-image: url(/media/bronsschat.webp);
-    background-position: top center;
+    /* background-position: top center; */
+    background-position: 0% 17%;
     background-size: 100vw auto;
     background-repeat: no-repeat;
-    background-attachment: fixed;
-    height: 50vw;
+    /* background-attachment: fixed; */
+    height: 65vw;
 }
 
-.logo {
-    height: 7%;
-    width: 7%;
+.logo{
+    height: 20%;
+    width: 20%;
     margin-left: 5%;
 }
 
-.titel {
+.titel{
     color: #fff;
-    margin-left: 25%;
+    margin-left: 30%;
 }
 
-/* .hoofd-img {
-    width: 70%;
-    height: 70%;
-}
-
-.hoofd-foto {
-    height: 70%;
-    width: 70%;
-    margin-left: 40%;
-    margin-top: 5%;
-    margin-bottom: 11%;
-} */
-
-/* scroll */
-.icon-scroll, .icon-scroll:before {
-    position: absolute;
-    left: 50%;
-}
-
-.icon-scroll {
-    width: 40px;
-    height: 70px;
-    margin-left: -20px;
-    top: 50%;
-    margin-top: 18%;
-    box-shadow: inset 0 0 0 1px #fbb002;
-    border-radius: 25px;
-}
-
-.icon-scroll:before {
-    content: '';
-    width: 8px;
-    height: 8px;
-    background: #fbb002;
-    margin-left: -4px;
-    top: 8px;
-    border-radius: 4px;
-    -webkit-animation-duration: 2s;
-    animation-duration: 2s;
-    -webkit-animation-iteration-count: infinite;
-    animation-iteration-count: infinite;
-    -webkit-animation-name: scroll;
-    animation-name: scroll;
-}
-
-@-webkit-keyframes scroll {
-    0% {
-        opacity: 1;
-    }
-
-    100% {
-        opacity: 0;
-        -webkit-transform: translateY(46px);
-        transform: translateY(46px);
-    }
-}
-
-@keyframes scroll {
-    0% {
-        opacity: 1;
-    }
-
-    100% {
-        opacity: 0;
-        -webkit-transform: translateY(46px);
-        transform: translateY(46px);
-    }
-}
-
-@media (max-width: 768px) {
-    .logo {
-        height: 20%;
-        width: 20%;
-    }
-
-    #homepage {
-        height: 37vh;
-        background-position: top center;
-        background-size: 100vw auto;
-        background-repeat: no-repeat;
-        background-attachment: initial;
-    }
-
-    .titel {
-        margin-left: 25%;
-        text-align: center;
-        margin-top: 3%;
-    }
-
-    h1 {
-        font-size: 22px !important;
-        line-height: 30px !important;
-    }
-
-    .icon-scroll {
-        /* top: 50%;
-        margin-top: 18%; */
-        visibility: hidden;
-    }
-    
-
-}
-
-/* intro */
-#intro {
+/* intro - de bronsschat */
+#intro{
     background-color: #2890df;
-    height: 50vw;
+    height: 100%;
 }
 
-.intro-titel {
-    color: #fff;
+.intro-titel{
+    color:#fff;
     text-align: center;
-    padding-top: 2%;
+    padding-top: 5%;
 }
 
-.intro-flex {
-    display: flex;
-    flex-direction: row;
-}
-
-.intro-text {
+.intro-text{
     text-align: justify;
     color: #fff;
-    margin-left: 10%;
+    margin-left: 5%;
+    margin-right: 5%;
     margin-top: 1%;
-    /* margin-right: 15%; */
 }
 
-.intro-img {
+.intro-img{
     margin-right: 10%;
     margin-left: 5%;
-    margin-top: 1.5%;
+    margin-top: 5%;
+    margin-bottom: 5%;
 }
-
-/* #intro-img {
-    height: 100%;
-    width: 140%;
-} */
 
 #intro-img{
     height: auto;
-    width: 40vw;
-}
-
-@media (max-width: 768px) {
-    #intro {
-        height: 100%;
-    }
-
-    .intro-flex {
-        display: flex;
-        flex-direction: column;
-    }
-
-    .intro-titel {
-        padding-top: 5%;
-    }
-
-    .intro-text {
-        margin-left: 5%;
-        margin-right: 5%;
-    }
-
-    .intro-img {
-        margin: 5%;
-    }
-
-    #intro-img {
-        height: auto;
-        width: 100%;
-    }
+    width: 90vw;
 }
 
 /* vindplaats */
-.vindplaats-flex {
-    display: flex;
-    flex-direction: row;
+
+#vindplaats{
+    height: 100%;
 }
 
-#vindplaats {
-    height: 50vw;
-}
-
-.vindplaats-titel {
+.vindplaats-titel{
     color: #2890df;
     text-align: center;
-    padding-top: 2%;
+    padding-top: 5%;
 }
 
 .vindplaats-text{
     text-align: justify;
     color: #000;
-    margin-left: 10%;
-    /* margin-right: 10%; */
-    margin-top: 1%;
+    margin-left: 5%;
+    margin-right: 5%;
+    margin-top: 5%;
 }
-
-/* leaflet kaart */
 
 .leaflet{
-    margin-right: 10%;
-    margin-left: 5%;
-    margin-top: 1%;
+    margin: 5%;
 }
 
-#map {
+#map{
     height: 500px;
-    width: 670px;
-}
-
-@media (max-width: 768px) {
-    #vindplaats {
-        height: 100%;
-    }
-
-    .vindplaats-flex {
-        display: flex;
-        flex-direction: column;
-    }
-
-    .vindplaats-titel {
-        padding-top: 5%;
-    }
-
-    .vindplaats-text {
-        margin-left: 5%;
-        margin-right: 5%;
-    }
-
-    .leaflet {
-        margin: 5%;
-    }
-
-    #map{
-        height: 350px;
-        width: 340px
-    }
+    width: auto;
 }
 
 /* bronsschat */
-
-#vondsten {
+#vondsten{
     background-color: #2890df;
-    height: 50vw;
+    height: 100%;
 }
 
-.vondsten-titel {
+.vondsten-titel{
     color: #fff;
     text-align: center;
-    padding-top: 2%;
+    padding-top: 5%;
 }
 
-.vondsten-flex {
-    display: flex;
-    flex-direction: row;
-}
-
-.vondsten-text {
+.vondsten-text{
     text-align: justify;
     color: #fff;
-    margin-left: 10%;
-    margin-right: 1.5%;
-    margin-top: 1%;
-    /* margin-right: 15%; */
+    margin-left: 5%;
+    margin-right: 5%;
+    margin-top: 5%;
 }
 
-.vondsten-img {
+.vondsten-img{
     margin-right: 10%;
     margin-left: 5%;
-    margin-top: 1%;
-    /* width: 100%; */
-}
-
-/* #vondsten-img {
-    height: auto;
-    width: 40vw;
-} */
-
-
-
-@media (max-width: 768px) {
-    #vondsten {
-        height: 100%;
-    }
-
-    .vondsten-flex {
-        display: flex;
-        flex-direction: column;
-    }
-
-    .vondsten-titel {
-        padding-top: 5%;
-    }
-
-    .vondsten-text {
-        margin-left: 5%;
-        margin-right: 5%;
-    }
-
-    .vondsten-img {
-        margin: 5%;
-    }
-
-    #vondsten-img {
-        height: auto;
-        width: 100%;
-    }
+    margin-top: 5%;
+    margin-bottom: 5%;
 }
 
 /* footer */
@@ -369,41 +152,27 @@ html {
 }
 
 #pnh {
-    height: 10%;
-    width: 10%;
-    margin-top: 1.2%;
-    margin-bottom: 1.2%;
+    /* position: static; */
+    height: 30px;
+    width: auto;
+    margin-top: 2%;
+    /* margin-bottom: 1%; */
     margin-right: 1.2%;
-    margin-left: 85%
+    margin-left: 40%
 }
 
 .copy{
     text-align: center;
-    margin-top: -2.5%;
+    padding-top: 0.5%;
     color: #fff;
 }
 
-@media (max-width: 768px) {
-    #pnh {
-        height: 40%;
-        width: 40%;
-        margin-left: 32%;
-        margin-top: 5%;
-        margin-right: 4%;
-    }
-
-    .footer {
-        margin-top: -1%;
-        height: 80px;
-    }
-
-    .copy{
-        padding-top: 2%;
-    }
+.copy-text{
+    font-size: 10px !important;
+    /* margin-top: 12%; */
 }
 
-/* scroll button */
-
+/* scroll to top button */
 #myBtn {
     display: none; /* Hidden by default */
     position: fixed; /* Fixed/sticky position */
@@ -418,15 +187,10 @@ html {
     cursor: pointer; /* Add a mouse pointer on hover */
     padding: 15px; /* Some padding */
     border-radius: 10px; /* Rounded corners */
-    font-size: 18px; /* Increase font size */
+    font-size: 10px; /* Increase font size */
   }
   
   #myBtn:hover {
     background-color: #666; /* Add a dark-grey background on hover */
   }
 
-  @media (max-width: 768px) {
-      #myBtn{
-          z-index: 1090;
-      }
-  }
