--- a/css/master.css
+++ b/css/master.css
@@ -68,11 +68,11 @@ html {
 }
 
 .intro-text{
-    text-align: justify;
+    text-align: left;
     color: #fff;
     margin-left: 5%;
     margin-right: 5%;
-    margin-top: 1%;
+    margin-top: 2%;
 }
 
 .intro-img{
@@ -100,11 +100,11 @@ html {
 }
 
 .vindplaats-text{
-    text-align: justify;
+    text-align: left;
     color: #000;
     margin-left: 5%;
     margin-right: 5%;
-    margin-top: 5%;
+    margin-top: 2%;
 }
 
 .leaflet{
@@ -129,11 +129,11 @@ html {
 }
 
 .vondsten-text{
-    text-align: justify;
+    text-align: left;
     color: #fff;
     margin-left: 5%;
     margin-right: 5%;
-    margin-top: 5%;
+    margin-top: 2%;
 }
 
 .vondsten-img{
@@ -148,17 +148,16 @@ html {
     background-color: #1377c3;
     height: 80px;
     width: 100%;
-    position: absolute;
+    position: relative;
 }
 
-#pnh {
-    /* position: static; */
+img#pnh{
+    /* position: sticky; */
     height: 30px;
     width: auto;
-    margin-top: 2%;
-    /* margin-bottom: 1%; */
-    margin-right: 1.2%;
-    margin-left: 40%
+    margin-top: 1%;
+    margin-bottom: 0.5%;
+    /* left: 35%; */
 }
 
 .copy{
