--- a/css/media.css
+++ b/css/media.css
@@ -89,7 +89,7 @@
     }
 
     .intro-text{
-        text-align: justify;
+        text-align: left;
         color: #fff;
         margin-left: 5%;
         margin-right: 5%;
@@ -99,7 +99,7 @@
 
     .intro-img{
         margin-right: 5%;
-        margin-top: 1.5%;
+        margin-top: 2%;
         margin-left: 5%;
     }
     
@@ -119,7 +119,7 @@
     }
 
     .vindplaats-text{
-        text-align: justify;
+        text-align: left;
         color: #000;
         margin-left: 5%;
         /* margin-right: 10%; */
@@ -142,7 +142,7 @@
     }
 
     .vondsten-text{
-        text-align: justify;
+        text-align: left;
         color: #fff;
         margin-left: 5%;
         margin-right: 1%;
@@ -167,13 +167,9 @@
         position: absolute;
     }
     
-    #pnh {
-        height: 10%;
-        width: 10%;
-        margin-top: 1.2%;
-        margin-bottom: 1.2%;
-        margin-right: 1.2%;
-        margin-left: 85%
+    img#pnh {
+        margin-top: 2.5%;
+
     }
     
     .copy{
