--- a/css/master.css
+++ b/css/master.css
@@ -5,6 +5,21 @@
     src: url(rockwell) format(truetype);
 }
 
+/* Voor smartphone: */
+[class*="col-"] {
+    width: 100%;
+  }
+  
+  @media only screen and (min-width: 768px) {
+    /* Voor desktop: */
+    .col-1 {width: 8.33%;}
+    .col-2 {width: 16.66%;}
+    .col-3 {width: 25%;}
+    .col-4 {width: 33.33%;}
+    .col-5 {width: 41.66%;}
+  
+  }
+
 * {
     margin: 0;
     font-family: 'Montserrat', 'rockwell', sans-serif;
