--- a/css/master.css
+++ b/css/master.css
@@ -1,72 +1,58 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,400;1,100;1,400&family=Poppins:ital,wght@0,100;0,300;0,400;0,500;0,700;0,800;0,900;1,300;1,400;1,500;1,700;1,800;1,900&display=swap');
-
 @font-face {
     font-family: rockwell;
     src: url(rockwell) format(truetype);
 }
-
 * {
     margin: 0;
     font-family: 'Montserrat', 'rockwell', sans-serif;
     box-sizing: border-box;
 }
-
 html {
     scroll-behavior: smooth;
     height: 100%;
     background-color: #fff;
 }
-
 .link {
     text-decoration: none;
     color: #fff;
     border-bottom: 2px solid #fbb002;
 }
-
 .flex{
     display: flex;
     flex-direction: column;
 }
-
 /* homepage */
 .header{
     background-color: #fbb002;
     height: 80px;
 }
-
 #homepage{
     background-image: url(/media/bronsschat.webp);
-    /* background-position: top center; */
     background-position: 0% 17%;
     background-size: 100vw auto;
     background-repeat: no-repeat;
-    /* background-attachment: fixed; */
     height: 65vw;
 }
-
 .logo{
     height: 20%;
     width: 20%;
     margin-left: 5%;
 }
-
 .titel{
     color: #fff;
     margin-left: 30%;
 }
-
 /* intro - de bronsschat */
 #intro{
     background-color: #2890df;
     height: 100%;
 }
-
 .intro-titel{
     color:#fff;
     text-align: center;
     padding-top: 5%;
 }
-
 .intro-text{
     text-align: left;
     color: #fff;
@@ -74,31 +60,25 @@ html {
     margin-right: 5%;
     margin-top: 2%;
 }
-
 .intro-img{
     margin-right: 10%;
     margin-left: 5%;
     margin-top: 5%;
     margin-bottom: 5%;
 }
-
 img#intro-img{
     height: auto;
     width: 90vw;
 }
-
 /* vindplaats */
-
 #vindplaats{
     height: 100%;
 }
-
 .vindplaats-titel{
     color: #2890df;
     text-align: center;
     padding-top: 5%;
 }
-
 .vindplaats-text{
     text-align: left;
     color: #000;
@@ -106,28 +86,23 @@ img#intro-img{
     margin-right: 5%;
     margin-top: 2%;
 }
-
 .leaflet{
     margin: 5%;
 }
-
 #map{
     height: 500px;
     width: auto;
 }
-
 /* bronsschat */
 #vondsten{
     background-color: #2890df;
     height: 100%;
 }
-
 .vondsten-titel{
     color: #fff;
     text-align: center;
     padding-top: 5%;
 }
-
 .vondsten-text{
     text-align: left;
     color: #fff;
@@ -135,14 +110,12 @@ img#intro-img{
     margin-right: 5%;
     margin-top: 2%;
 }
-
 .vondsten-img{
     margin-right: 10%;
     margin-left: 5%;
     margin-top: 5%;
     margin-bottom: 5%;
 }
-
 /* footer */
 .footer {
     background-color: #1377c3;
@@ -150,27 +123,21 @@ img#intro-img{
     width: 100%;
     position: relative;
 }
-
 img#pnh{
-    /* position: sticky; */
     height: 30px;
     width: auto;
     margin-top: 1%;
     margin-bottom: 0.5%;
-    /* left: 35%; */
 }
-
 .copy{
     text-align: center;
     padding-top: 0.5%;
     color: #fff;
 }
-
 .copy-text{
     font-size: 10px !important;
     /* margin-top: 12%; */
 }
-
 /* scroll to top button */
 #myBtn {
     display: none; /* Hidden by default */
@@ -188,8 +155,156 @@ img#pnh{
     border-radius: 10px; /* Rounded corners */
     font-size: 10px; /* Increase font size */
   }
-  
   #myBtn:hover {
     background-color: #666; /* Add a dark-grey background on hover */
   }
-
+  /* MEDIA QUERIES */
+  @media (min-width: 1200px){
+    .flex{
+        display: flex;
+        flex-direction: row;
+    }
+    .logo{
+        height: 7%;
+        width: 7%;
+    }
+    #homepage{
+        background-position: 0% 100%;
+    }
+    .header{
+        height: 100px;
+    }
+    h1{
+        font-size: 35px;
+        line-height: 50px;
+    }
+    .titel{
+        margin-top: 1%;
+        margin-left: 30%;
+    }
+    .icon-scroll, .icon-scroll:before {
+        position: absolute;
+        left: 50%;
+    }
+    .icon-scroll {
+        width: 40px;
+        height: 70px;
+        margin-left: -20px;
+        top: 50%;
+        margin-top: 18%;
+        box-shadow: inset 0 0 0 1px #fbb002;
+        border-radius: 25px;
+    }
+    .icon-scroll:before {
+        content: '';
+        width: 8px;
+        height: 8px;
+        background: #fbb002;
+        margin-left: -4px;
+        top: 8px;
+        border-radius: 4px;
+        -webkit-animation-duration: 2s;
+        animation-duration: 2s;
+        -webkit-animation-iteration-count: infinite;
+        animation-iteration-count: infinite;
+        -webkit-animation-name: scroll;
+        animation-name: scroll;
+    }
+    @-webkit-keyframes scroll {
+        0% {
+            opacity: 1;
+        }
+        100% {
+            opacity: 0;
+            -webkit-transform: translateY(46px);
+            transform: translateY(46px);
+        }
+    }
+    @keyframes scroll {
+        0% {
+            opacity: 1;
+        }
+        100% {
+            opacity: 0;
+            -webkit-transform: translateY(46px);
+            transform: translateY(46px);
+        }
+    }
+    /* intro */
+    .intro-titel{
+        padding-top: 2%;
+    }
+    .intro-text{
+        text-align: left;
+        color: #fff;
+        margin-left: 5%;
+        margin-right: 5%;
+        margin-bottom: 5%;
+    }
+    .intro-img{
+        margin-right: 5%;
+        margin-top: 2%;
+        margin-left: 5%;
+    }
+    #intro-img{
+        height: auto;
+        width: 45vw;
+    }
+    /* vindplaats */
+    #vindplaats{
+        height: 100%;
+    }
+    .vindplaats-titel{
+        padding-top: 2%;
+    }
+    .vindplaats-text{
+        text-align: left;
+        color: #000;
+        margin-left: 5%;
+        margin-bottom: 5%;
+        margin-top: 2%;
+    }
+    .leaflet{
+        margin-right: 5%;
+        margin-top: 2%;
+        height: auto;
+        width: 400%;
+    }
+    /* bronsschat */
+    .vondsten-titel{
+        padding-top: 2%;
+    }
+    .vondsten-text{
+        text-align: left;
+        color: #fff;
+        margin-left: 5%;
+        margin-right: 1%;
+        margin-bottom: 5%;
+        margin-top: 2%;
+    }
+    .vondsten-img{
+        margin-right: 1%;
+        margin-left: 11%;
+        margin-top: 2%;
+        width: 889%;
+        height: auto;
+    }
+    /* footer */
+    .footer {
+        background-color: #1377c3;
+        height: 80px;
+        width: 100%;
+        position: absolute;
+    }
+    img#pnh {
+        margin-top: 2.5%;
+    }
+    .copy{
+        text-align: center;
+        margin-top: -2.5%;
+        color: #fff;
+    }
+    #myBtn{
+        font-size: 18px; 
+    }
+}
