--- a/css/master.css
+++ b/css/master.css
@@ -175,12 +175,12 @@ img#pnh{
         height: 100px;
     }
     h1{
-        font-size: 35px;
+        font-size: 40px !important;
         line-height: 50px;
     }
     .titel{
-        margin-top: 1%;
-        margin-left: 30%;
+        margin-top: 2%;
+        margin-left: 20%;
     }
     .icon-scroll, .icon-scroll:before {
         position: absolute;
